k8s-deployment/backend_feed_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-service
  labels:
    service: feed-service
spec:
  replicas: 2
  selector:
    matchLabels:
      service: feed-service
  template:
    metadata:
      labels:
        service: feed-service
    spec:
      containers:
      - name: feed-service
        image: aluminetchidiebre/feed-go-service:latest #You must add the tag "latest" this way k*s will always pull the latest image version for you
        imagePullPolicy: Always          
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"       
        ports:
        - containerPort: 8080
        livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15  # The kubelet will run the first liveness probe 15 seconds after the container starts. If you make the value too small like 3 seconds your container might enter a crashloop because your container has not started running for the health endpoint to work
            periodSeconds: 20  # kubelet will continue to run this check every 20 seconds.
        volumeMounts:
        - name: aws-secret
          mountPath: "/root/.aws/"  #making our aws configured in you local environment. This will be the path our containser will store our aws credentials just the way it is on our local machine
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: aws-secret
        secret:
          secretName: aws-secret
