k8s-deployment/backend_feed_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: feed-service
  name: feed-service  # the name should be thesame with the server host name inside one of your nginx upstream. Otherwise your reverseproxy will crash becasue it cant reference this service to listen for
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    service: feed-service
