k8s-deployment/frontend_udagram_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-frontend
  labels:
    service: udagram-frontend
spec:
  ports: #we are mapping port 80 on front-end nginx to port 80 on our k8s
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    service: udagram-frontend
  type: LoadBalancer #This will set up loadbalancer for our front-end and give us a nice url. The consumers can only get to our front-end thriugh the loadbalancer and not the acutal internal IP address which is best practise
