k8s-deployment/reverseproxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: reverseproxy
  name: reverseproxy-svc #this is the name you will see when you run kubectl get services
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    service: reverseproxy
  type: LoadBalancer #This gives us a public url that we our front end can invokoe. The reversproxy is the middle man that then direct the requests to the right microservice! So in this case, this reverseproxy is opened to outside of the cluster
